--- a/TPlayerDatabase/TPlayerDatabase.csproj
+++ b/TPlayerDatabase/TPlayerDatabase.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{513EF5A5-B1FA-417C-952E-CD773F5B1782}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tavstal.TExample</RootNamespace>
-    <AssemblyName>TExample</AssemblyName>
+    <RootNamespace>Tavstal.TPlayerDatabase</RootNamespace>
+    <AssemblyName>TPlayerDatabase</AssemblyName>
     <TargetFramework>net48</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <Deterministic>false</Deterministic>
@@ -103,14 +103,14 @@
   <ItemGroup>
     <Compile Include="Commands\CommandExample.cs" />
     <Compile Include="Commands\CommandVersion.cs" />
-    <Compile Include="ExampleMain.cs" />
+    <Compile Include="TPlayerDatabase.cs" />
     <Compile Include="Handlers\PlayerEventHandler.cs" />
     <Compile Include="Hooks\UconomyHook.cs" />
     <Compile Include="Managers\DatabaseManager.cs" />
     <Compile Include="Models\DatabaseData.cs" />
     <Compile Include="Models\PlayerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ExampleConfig.cs" />
+    <Compile Include="TPlayerDatabaseConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
